:sparkles: Add a new mapInvokeDynamicMethodName method.