@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 - 2024 the original author or authors.
+ * Copyright 2017 - 2025 the original author or authors.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,8 +18,6 @@ package infra.bytecode.commons;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -32,20 +30,18 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class SimpleRemapperTest {
 
   @Test
-  public void testMapSignature_remapParentOnly_nestedClassExtends() {
+  void testMapSignature_remapParentOnly_nestedClassExtends() {
     String inputSignature = "LOuter<Ljava/lang/Object;>.Inner;";
-    Remapper remapper = new SimpleRemapper(Collections.singletonMap("Outer", "RenamedOuter"));
-
+    Remapper remapper = new SimpleRemapper(Map.of("Outer", "RenamedOuter"));
     String remappedSignature = remapper.mapSignature(inputSignature, false);
-
     assertEquals("LRenamedOuter<Ljava/lang/Object;>.Inner;", remappedSignature);
   }
 
   @Test
-  public void testMapSignature_remapChildOnly_nestedClassExtends() {
+  void testMapSignature_remapChildOnly_nestedClassExtends() {
     String inputSignature = "LOuter<Ljava/lang/Object;>.Inner;";
-    Remapper remapper =
-            new SimpleRemapper(Collections.singletonMap("Outer$Inner", "Outer$RenamedInner"));
+    Remapper remapper = new SimpleRemapper(
+            Map.of("Outer$Inner", "Outer$RenamedInner"));
 
     String remappedSignature = remapper.mapSignature(inputSignature, false);
 
@@ -53,10 +49,10 @@ public class SimpleRemapperTest {
   }
 
   @Test
-  public void testMapSignature_remapChildOnly_nestedClassExtends_identifiersWithDollarSign() {
+  void testMapSignature_remapChildOnly_nestedClassExtends_identifiersWithDollarSign() {
     String inputSignature = "LOuter<Ljava/lang/Object;>.Inner$1;";
-    Remapper remapper =
-            new SimpleRemapper(Collections.singletonMap("Outer$Inner$1", "Outer$RenamedInner$1"));
+    Remapper remapper = new SimpleRemapper(
+            Map.of("Outer$Inner$1", "Outer$RenamedInner$1"));
 
     String remappedSignature = remapper.mapSignature(inputSignature, false);
 
@@ -64,11 +60,10 @@ public class SimpleRemapperTest {
   }
 
   @Test
-  public void testMapSignature_remapBothParentAndChild_nestedClassExtends() {
+  void testMapSignature_remapBothParentAndChild_nestedClassExtends() {
     String inputSignature = "LOuter<Ljava/lang/Object;>.Inner;";
-    Map<String, String> mapping = new HashMap<>();
-    mapping.put("Outer", "RenamedOuter");
-    mapping.put("Outer$Inner", "RenamedOuter$RenamedInner");
+    Map<String, String> mapping =
+            Map.of("Outer", "RenamedOuter", "Outer$Inner", "RenamedOuter$RenamedInner");
     Remapper remapper = new SimpleRemapper(mapping);
 
     String remappedSignature = remapper.mapSignature(inputSignature, false);
